# dbt-cloud-downstream-ci-action

./: Dockerfile  LICENSE  README.md  action.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
requirements/: base.txt  dev.txt
src/: main.py
tests/: test_action.py
