[tool.poetry]
name = "dbt-cloud-downstream-ci-action"
version = "0.6.2"
description = "This action will run dbt Cloud CI jobs taking into account downstream dependencies from projects set up with dbt Mesh"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.26.0"
pandas = "^2.2.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^7.4.4"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "<8.19"
python-dotenv = "^1.0.1"
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
